	PR rtl-optimization/37769 	* regmove.c (optimize_reg_copy_2): Update REG_INC note if needed.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141354 138bc75d-0d04-0410-961f-82ee72b054a4